Build TechnicallyPilates_2025-04-09T19-06-19.txt

Showing Recent Issues

Build target TechnicallyPilates of project TechnicallyPilates with configuration Debug

SwiftEmitModule normal x86_64 Emitting\ module\ for\ TechnicallyPilates (in target 'TechnicallyPilates' from project 'TechnicallyPilates')
    cd /Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates
    builtin-swiftTaskExecution -- /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -emit-module -experimental-skip-non-inlinable-function-bodies-without-types /Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/CameraView.swift /Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/TechnicallyPilates/ContentView.swift /Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/PoseEstimator.swift /Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/TechnicallyPilatesApp.swift /Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/PoseClassifier.swift -target x86_64-apple-ios16.2-simulator -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator16.2.sdk -I /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Products/Debug-iphonesimulator -F /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Products/Debug-iphonesimulator -no-color-diagnostics -enable-testing -g -module-cache-path /Users/patrickorourke/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -serialize-debugging-options -enable-bare-slash-regex -empty-abi-descriptor -Xcc -working-directory -Xcc /Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates -resource-dir /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift -enable-anonymous-context-mangled-names -Xcc -I/Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/TechnicallyPilates-generated-files.hmap -Xcc -I/Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/TechnicallyPilates-own-target-headers.hmap -Xcc -I/Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/TechnicallyPilates-all-target-headers.hmap -Xcc -iquote -Xcc /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/TechnicallyPilates-project-headers.hmap -Xcc -I/Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Products/Debug-iphonesimulator/include -Xcc -I/Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/DerivedSources-normal/x86_64 -Xcc -I/Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/DerivedSources/x86_64 -Xcc -I/Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/DerivedSources -Xcc -DDEBUG\=1 -module-name TechnicallyPilates -disable-clang-spi -target-sdk-version 16.2 -emit-module-doc-path /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/Objects-normal/x86_64/TechnicallyPilates.swiftdoc -emit-module-source-info-path /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/Objects-normal/x86_64/TechnicallyPilates.swiftsourceinfo -emit-objc-header-path /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/Objects-normal/x86_64/TechnicallyPilates-Swift.h -serialize-diagnostics-path /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/Objects-normal/x86_64/TechnicallyPilates-master-emit-module.dia -emit-dependencies-path /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/Objects-normal/x86_64/TechnicallyPilates-master-emit-module.d -o /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/Objects-normal/x86_64/TechnicallyPilates.swiftmodule -emit-abi-descriptor-path /Users/patrickorourke/Library/Developer/Xcode/DerivedData/TechnicallyPilates-eghgvbilqpymsdhihkohxnwldmzr/Build/Intermediates.noindex/TechnicallyPilates.build/Debug-iphonesimulator/TechnicallyPilates.build/Objects-normal/x86_64/TechnicallyPilates.abi.json

/Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/PoseEstimator.swift:8:66: error: argument passed to call that takes no arguments
    private let classifier = try! PoseClassifier(configuration: .init())
                                                ~~~~~~~~~~~~~~~~~^~~~~~~
/Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/PoseEstimator.swift:8:66: error: cannot infer contextual base in reference to member 'init'
    private let classifier = try! PoseClassifier(configuration: .init())
                                                                ~^~~~

/Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/PoseEstimator.swift:8:66: Argument passed to call that takes no arguments

/Users/patrickorourke/Desktop/TechnicallyPilates/TechnicallyPilates/PoseEstimator.swift:8:66: Cannot infer contextual base in reference to member 'init'



Build failed    09/04/2025, 7:06 PM    0.8 seconds
